# AbstractVM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Factory/: Factory.cpp  Factory.hpp
File/: File.cpp  File.hpp  File_arithmetic_commands.cpp  File_commands.cpp  File_operations.cpp  File_other_commands.cpp
Operand/: IOperand.hpp  Operand.hpp  Operand.inl  eOperandType.hpp
VM/: File.cpp  File.hpp  File_operations.cpp  VM.cpp  VM.hpp
